Match history improvement, bug fix Match history only processes normal and ranked games by looking for the available matches, z-index made footer unclickable because body was covering it

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -115,7 +115,7 @@ footer {
   min-height: 50px;
   text-align: center;
   border-top: 1px solid #a09b8c;
-  z-index: -5;
+  z-index: -1;
 }
 
 .dashboard footer {
