--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -107,6 +107,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100svh;
+  z-index: -2;
 }
 
 #homeBody {
